--- a/_layouts/talks.html
+++ b/_layouts/talks.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <header>
   <h1>{{ page.title }}</h1>
-  <p class="tagline">Dive into my latest talks and meetup moments—where ideas spark and connections grow! 🚀📸</p>
+  <p class="tagline">where ideas spark and connections grow! 🚀📸</p>
 </header>
 
 <!-- Image Slider -->
